// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader renders active with custom percentage 1`] = `
<DocumentFragment>
  .cache-cmn72i-StyledSvg {
  -webkit-animation: spin 0.75s linear infinite;
  animation: spin 0.75s linear infinite;
}

.cache-11f05l0-Loader {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<svg
    aria-label="Loading test"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="20"
    aria-valuetext="20%"
    class="cache-cmn72i-StyledSvg e1y1n78x1"
    role="progressbar"
    style="height: 40px; width: 40px;"
    viewBox="0 0 100 100"
  >
    <circle
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="#e9eaeb"
      stroke-width="16"
    />
    <circle
      class="cache-11f05l0-Loader"
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="#521094"
      stroke-dasharray="263.89378290154264"
      stroke-dashoffset="211.11502632123413"
      stroke-linecap="round"
      stroke-width="16"
    />
  </svg>
</DocumentFragment>
`;

exports[`Loader renders active with default percentage 1`] = `
<DocumentFragment>
  .cache-cmn72i-StyledSvg {
  -webkit-animation: spin 0.75s linear infinite;
  animation: spin 0.75s linear infinite;
}

.cache-11f05l0-Loader {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<svg
    aria-label="Loading test"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="20"
    aria-valuetext="20%"
    class="cache-cmn72i-StyledSvg e1y1n78x1"
    role="progressbar"
    style="height: 40px; width: 40px;"
    viewBox="0 0 100 100"
  >
    <circle
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="#e9eaeb"
      stroke-width="16"
    />
    <circle
      class="cache-11f05l0-Loader"
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="#521094"
      stroke-dasharray="263.89378290154264"
      stroke-dashoffset="211.11502632123413"
      stroke-linecap="round"
      stroke-width="16"
    />
  </svg>
</DocumentFragment>
`;

exports[`Loader renders default props 1`] = `
<DocumentFragment>
  .cache-11f05l0-Loader {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<svg
    aria-label="Loading test"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="20"
    aria-valuetext="20%"
    class="cache-6jkva3-StyledSvg e1y1n78x1"
    role="progressbar"
    style="height: 40px; width: 40px;"
    viewBox="0 0 100 100"
  >
    <circle
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="#e9eaeb"
      stroke-width="16"
    />
    <circle
      class="cache-11f05l0-Loader"
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="#521094"
      stroke-dasharray="263.89378290154264"
      stroke-dashoffset="211.11502632123413"
      stroke-linecap="round"
      stroke-width="16"
    />
  </svg>
</DocumentFragment>
`;

exports[`Loader renders with color neutral and primary 1`] = `
<DocumentFragment>
  .cache-11f05l0-Loader {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

.cache-uvczfa-Text {
  fill: #e9eaeb;
  font-size: 26px;
  dominant-baseline: middle;
  text-anchor: middle;
}

<svg
    aria-label="Loading test"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="20"
    aria-valuetext="20%"
    class="cache-6jkva3-StyledSvg e1y1n78x1"
    role="progressbar"
    style="height: 40px; width: 40px;"
    viewBox="0 0 100 100"
  >
    <circle
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="#e9eaeb"
      stroke-width="16"
    />
    <circle
      class="cache-11f05l0-Loader"
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="#e9eaeb"
      stroke-dasharray="263.89378290154264"
      stroke-dashoffset="211.11502632123413"
      stroke-linecap="round"
      stroke-width="16"
    />
    <text
      class="cache-uvczfa-Text e1y1n78x0"
      x="50"
      y="50"
    >
      Colored text
    </text>
  </svg>
  .cache-11f05l0-Loader {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

.cache-1arfmsj-Text {
  fill: #521094;
  font-size: 26px;
  dominant-baseline: middle;
  text-anchor: middle;
}

<svg
    aria-label="Loading test"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="20"
    aria-valuetext="20%"
    class="cache-6jkva3-StyledSvg e1y1n78x1"
    role="progressbar"
    style="height: 40px; width: 40px;"
    viewBox="0 0 100 100"
  >
    <circle
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="#e9eaeb"
      stroke-width="16"
    />
    <circle
      class="cache-11f05l0-Loader"
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="#521094"
      stroke-dasharray="263.89378290154264"
      stroke-dashoffset="211.11502632123413"
      stroke-linecap="round"
      stroke-width="16"
    />
    <text
      class="cache-1arfmsj-Text e1y1n78x0"
      x="50"
      y="50"
    >
      Colored text
    </text>
  </svg>
</DocumentFragment>
`;

exports[`Loader renders with custom size 1`] = `
<DocumentFragment>
  .cache-11f05l0-Loader {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<svg
    aria-label="Loading test"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="20"
    aria-valuetext="20%"
    class="cache-6jkva3-StyledSvg e1y1n78x1"
    role="progressbar"
    style="height: 100px; width: 100px;"
    viewBox="0 0 100 100"
  >
    <circle
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="#e9eaeb"
      stroke-width="16"
    />
    <circle
      class="cache-11f05l0-Loader"
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="#521094"
      stroke-dasharray="263.89378290154264"
      stroke-dashoffset="211.11502632123413"
      stroke-linecap="round"
      stroke-width="16"
    />
  </svg>
</DocumentFragment>
`;

exports[`Loader renders with inlined color 1`] = `
<DocumentFragment>
  .cache-11f05l0-Loader {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

.cache-ln09w6-Text {
  fill: #ff0000;
  font-size: 26px;
  dominant-baseline: middle;
  text-anchor: middle;
}

<svg
    aria-label="Loading test"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="20"
    aria-valuetext="20%"
    class="cache-6jkva3-StyledSvg e1y1n78x1"
    role="progressbar"
    style="height: 40px; width: 40px;"
    viewBox="0 0 100 100"
  >
    <circle
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="#e9eaeb"
      stroke-width="16"
    />
    <circle
      class="cache-11f05l0-Loader"
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="#ff0000"
      stroke-dasharray="263.89378290154264"
      stroke-dashoffset="211.11502632123413"
      stroke-linecap="round"
      stroke-width="16"
    />
    <text
      class="cache-ln09w6-Text e1y1n78x0"
      x="50"
      y="50"
    >
      Colored text
    </text>
  </svg>
</DocumentFragment>
`;

exports[`Loader renders with inlined trailColor 1`] = `
<DocumentFragment>
  .cache-11f05l0-Loader {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<svg
    aria-label="Loading test"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="20"
    aria-valuetext="20%"
    class="cache-6jkva3-StyledSvg e1y1n78x1"
    role="progressbar"
    style="height: 40px; width: 40px;"
    viewBox="0 0 100 100"
  >
    <circle
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="#ff0000"
      stroke-width="16"
    />
    <circle
      class="cache-11f05l0-Loader"
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="#521094"
      stroke-dasharray="263.89378290154264"
      stroke-dashoffset="211.11502632123413"
      stroke-linecap="round"
      stroke-width="16"
    />
  </svg>
</DocumentFragment>
`;

exports[`Loader renders with percentage 75 1`] = `
<DocumentFragment>
  .cache-cmn72i-StyledSvg {
  -webkit-animation: spin 0.75s linear infinite;
  animation: spin 0.75s linear infinite;
}

.cache-11f05l0-Loader {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<svg
    aria-label="Loading test"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="75"
    aria-valuetext="75%"
    class="cache-cmn72i-StyledSvg e1y1n78x1"
    role="progressbar"
    style="height: 40px; width: 40px;"
    viewBox="0 0 100 100"
  >
    <circle
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="#e9eaeb"
      stroke-width="16"
    />
    <circle
      class="cache-11f05l0-Loader"
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="#521094"
      stroke-dasharray="263.89378290154264"
      stroke-dashoffset="65.97344572538566"
      stroke-linecap="round"
      stroke-width="16"
    />
  </svg>
</DocumentFragment>
`;

exports[`Loader renders with strokeWidth 25 1`] = `
<DocumentFragment>
  .cache-11f05l0-Loader {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<svg
    aria-label="Loading test"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="20"
    aria-valuetext="20%"
    class="cache-6jkva3-StyledSvg e1y1n78x1"
    role="progressbar"
    style="height: 40px; width: 40px;"
    viewBox="0 0 100 100"
  >
    <circle
      cx="50"
      cy="50"
      fill="none"
      r="37.5"
      stroke="#e9eaeb"
      stroke-width="25"
    />
    <circle
      class="cache-11f05l0-Loader"
      cx="50"
      cy="50"
      fill="none"
      r="37.5"
      stroke="#521094"
      stroke-dasharray="235.61944901923448"
      stroke-dashoffset="188.4955592153876"
      stroke-linecap="round"
      stroke-width="25"
    />
  </svg>
</DocumentFragment>
`;

exports[`Loader renders with text 100% 1`] = `
<DocumentFragment>
  .cache-11f05l0-Loader {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

.cache-1arfmsj-Text {
  fill: #521094;
  font-size: 26px;
  dominant-baseline: middle;
  text-anchor: middle;
}

<svg
    aria-label="Loading test"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="20"
    aria-valuetext="20%"
    class="cache-6jkva3-StyledSvg e1y1n78x1"
    role="progressbar"
    style="height: 40px; width: 40px;"
    viewBox="0 0 100 100"
  >
    <circle
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="#e9eaeb"
      stroke-width="16"
    />
    <circle
      class="cache-11f05l0-Loader"
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="#521094"
      stroke-dasharray="263.89378290154264"
      stroke-dashoffset="211.11502632123413"
      stroke-linecap="round"
      stroke-width="16"
    />
    <text
      class="cache-1arfmsj-Text e1y1n78x0"
      x="50"
      y="50"
    >
      100%
    </text>
  </svg>
</DocumentFragment>
`;

exports[`Loader renders with trailColor danger 1`] = `
<DocumentFragment>
  .cache-11f05l0-Loader {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<svg
    aria-label="Loading test"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="20"
    aria-valuetext="20%"
    class="cache-6jkva3-StyledSvg e1y1n78x1"
    role="progressbar"
    style="height: 40px; width: 40px;"
    viewBox="0 0 100 100"
  >
    <circle
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="#ac2740"
      stroke-width="16"
    />
    <circle
      class="cache-11f05l0-Loader"
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="#521094"
      stroke-dasharray="263.89378290154264"
      stroke-dashoffset="211.11502632123413"
      stroke-linecap="round"
      stroke-width="16"
    />
  </svg>
</DocumentFragment>
`;

exports[`Loader renders with trailColor neutral 1`] = `
<DocumentFragment>
  .cache-11f05l0-Loader {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<svg
    aria-label="Loading test"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="20"
    aria-valuetext="20%"
    class="cache-6jkva3-StyledSvg e1y1n78x1"
    role="progressbar"
    style="height: 40px; width: 40px;"
    viewBox="0 0 100 100"
  >
    <circle
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="#e9eaeb"
      stroke-width="16"
    />
    <circle
      class="cache-11f05l0-Loader"
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="#521094"
      stroke-dasharray="263.89378290154264"
      stroke-dashoffset="211.11502632123413"
      stroke-linecap="round"
      stroke-width="16"
    />
  </svg>
</DocumentFragment>
`;

exports[`Loader renders with trailColor primary 1`] = `
<DocumentFragment>
  .cache-11f05l0-Loader {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<svg
    aria-label="Loading test"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="20"
    aria-valuetext="20%"
    class="cache-6jkva3-StyledSvg e1y1n78x1"
    role="progressbar"
    style="height: 40px; width: 40px;"
    viewBox="0 0 100 100"
  >
    <circle
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="#521094"
      stroke-width="16"
    />
    <circle
      class="cache-11f05l0-Loader"
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="#521094"
      stroke-dasharray="263.89378290154264"
      stroke-dashoffset="211.11502632123413"
      stroke-linecap="round"
      stroke-width="16"
    />
  </svg>
</DocumentFragment>
`;

exports[`Loader renders with trailColor success 1`] = `
<DocumentFragment>
  .cache-11f05l0-Loader {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<svg
    aria-label="Loading test"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="20"
    aria-valuetext="20%"
    class="cache-6jkva3-StyledSvg e1y1n78x1"
    role="progressbar"
    style="height: 40px; width: 40px;"
    viewBox="0 0 100 100"
  >
    <circle
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="#22674e"
      stroke-width="16"
    />
    <circle
      class="cache-11f05l0-Loader"
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="#521094"
      stroke-dasharray="263.89378290154264"
      stroke-dashoffset="211.11502632123413"
      stroke-linecap="round"
      stroke-width="16"
    />
  </svg>
</DocumentFragment>
`;

exports[`Loader renders with trailColor warning 1`] = `
<DocumentFragment>
  .cache-11f05l0-Loader {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<svg
    aria-label="Loading test"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="20"
    aria-valuetext="20%"
    class="cache-6jkva3-StyledSvg e1y1n78x1"
    role="progressbar"
    style="height: 40px; width: 40px;"
    viewBox="0 0 100 100"
  >
    <circle
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="#7c5400"
      stroke-width="16"
    />
    <circle
      class="cache-11f05l0-Loader"
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="#521094"
      stroke-dasharray="263.89378290154264"
      stroke-dashoffset="211.11502632123413"
      stroke-linecap="round"
      stroke-width="16"
    />
  </svg>
</DocumentFragment>
`;

exports[`Loader renders with unknown inlined color 1`] = `
<DocumentFragment>
  .cache-11f05l0-Loader {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<svg
    aria-label="Loading test"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="20"
    aria-valuetext="20%"
    class="cache-6jkva3-StyledSvg e1y1n78x1"
    role="progressbar"
    style="height: 40px; width: 40px;"
    viewBox="0 0 100 100"
  >
    <circle
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="#e9eaeb"
      stroke-width="16"
    />
    <circle
      class="cache-11f05l0-Loader"
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="unknown"
      stroke-dasharray="263.89378290154264"
      stroke-dashoffset="211.11502632123413"
      stroke-linecap="round"
      stroke-width="16"
    />
  </svg>
</DocumentFragment>
`;
